<resources>
    <string name="app_name">Photos</string>
    <string name="recent_days">Recent Days</string>
    <string name="people_pets">People &amp; Pets</string>
    <string name="select">Select</string>
    <string name="photos_count">%d Items</string>
    <string name="loading">Loading...</string>
    <string name="no_photos">No photos found</string>
    <string name="permission_required">Storage permission is required to access photos</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="image_description">Photo</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="older">Older</string>
</resources>